--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-/* google font nunito and croissant one */
-@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+/* google font lato and croissant one */
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.font-nunito{
-  font-family: "Nunito", sans-serif;
+.font-lato{
+  font-family: "Lato", sans-serif;
 }
 
 .font-croissant{
@@ -14,5 +14,5 @@
 }
 
 body{
-  font-family: "Nunito", sans-serif;
+  font-family: "Lato", sans-serif;
 }
